[package]
name = "zoey"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
extract-frontmatter = "2.1"
fs_extra = "1.2"
gray_matter = "0.1"
handlebars = "4.1"
lol_html = "0.3"
pulldown-cmark = { version = "0.8", default-features = false, features = ["simd"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
walkdir = "2"
