[package]
name = "zoey"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
extract-frontmatter = "4"
fs_extra = "1.2"
futures = { version = "0.3", optional = true }
grass = { version = "0.11", default-features = false }
gray_matter = "0.2"
handlebars = "4.1"
hotwatch = { version = "0.4", optional = true }
lol_html = "0.3"
pulldown-cmark = { version = "0.9", default-features = false, features = ["simd"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"], optional = true }
url = "2.2"
walkdir = "2"
warp = { version = "0.3", optional = true }

[features]
default = ["serve"]
serve = ["futures", "hotwatch", "tokio", "warp"]
