[package]
edition = "2018"
name = "zyl-site"
version = "0.1.0"

[dependencies]
anyhow = "1"
extract-frontmatter = "4"
fs_extra = "1.2"
futures = {version = "0.3", optional = true}
grass = {version = "0.13", default-features = false}
gray_matter = "0.2"
handlebars = "5"
hotwatch = {version = "0.5", optional = true}
itertools = "0.13"
lol_html = "1"
minifier = {version = "0.3", features = ["html"]}
percent-encoding = {version = "2", optional = true}
pulldown-cmark = {version = "0.11", default-features = false, features = [
  "simd",
  "html",
]}
rss = {version = "2", features = ["validation"]}
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
time = {version = "0.3", features = ["serde-human-readable"]}
tokio = {version = "1.10", features = [
  "macros",
  "rt-multi-thread",
], optional = true}
url = {version = "2.2", features = ["serde"]}
walkdir = "2"
warp = {version = "0.3", optional = true}

[features]
default = ["serve"]
serve = ["futures", "hotwatch", "percent-encoding", "tokio", "warp"]
